--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -50,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
+    "axios-mock-adapter": "^1.18.2",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -64,6 +65,7 @@
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
+    "ts-sinon": "^2.0.1",
     "typedoc": "^0.19.0",
     "typescript": "^4.0.2"
   },
