--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
   },
   "dependencies": {
     "axios": "^0.21.2",
-    "joi": "^17.4.3"
+    "joi": "^17.4.3",
+    "simple-oauth2": "^4.2.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^14.11.8",
+    "@types/simple-oauth2": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.15.0",
