--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
-    "test": "run-s build test:*",
-    "test:lint": "eslint src --ext .ts",
-    "test:prettier": "prettier \"src/**/*.ts\" --list-different",
+    "test": "run-s build test:unit",
     "test:unit": "nyc --silent ava",
+    "lint": "run-s lint:*",
+    "lint:eslint": "eslint src --ext .ts --max-warnings=0",
+    "lint:prettier": "prettier \"src/**/*.ts\" --list-different",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
@@ -35,7 +36,7 @@
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
-    "prepare": "npm run build"
+    "prepare": "npm run build && husky install"
   },
   "engines": {
     "node": ">=10"
@@ -58,6 +59,8 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.1.1",
@@ -95,5 +98,8 @@
     "exclude": [
       "**/*.spec.js"
     ]
+  },
+  "lint-staged": {
+    "src/**/*.ts": "npm run fix -- --"
   }
 }
