--- a/package.json
+++ b/package.json
@@ -100,6 +100,9 @@
     ]
   },
   "lint-staged": {
-    "src/**/*.ts": "npm run fix -- --"
+    "src/**/*.ts": [
+      "eslint --max-warnings=0",
+      "prettier --check"
+    ]
   }
 }
